removei build  warning (unused parameter ) https://bugs.webkit.org/show_bug.cgi?id=114670

Patch by Xuefei Ren <xren@blackberry.com> on 2013-04-18
Reviewed by Rob Buis.

remove warning (unused parameter ) in
Source/WebKit/blackberry/WebCoreSupport

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::mouseDidMoveOverElement):
(WebCore::ChromeClientBlackBerry::needTouchEvents):
(WebCore::ChromeClientBlackBerry::reachedMaxAppCacheSize):
* WebCoreSupport/DatePickerClient.cpp:
(WebCore::DatePickerClient::setValue):
* WebCoreSupport/EditorClientBlackBerry.cpp:
(WebCore::EditorClientBlackBerry::checkSpellingOfString):
(WebCore::EditorClientBlackBerry::getAutoCorrectSuggestionForMisspelledWord):
* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNewWindowAction):
(WebCore::FrameLoaderClientBlackBerry::dispatchDidReceiveResponse):
(WebCore::FrameLoaderClientBlackBerry::shouldUseCredentialStorage):
* WebCoreSupport/InspectorClientBlackBerry.cpp:
(WebCore::InspectorClientBlackBerry::updateInspectorStateCookie):
* WebCoreSupport/NetworkInfoClientBlackBerry.cpp:
(WebCore::NetworkInfoClientBlackBerry::onCurrentNetworkTypeChange):
(WebCore::NetworkInfoClientBlackBerry::onCurrentCellularTypeChange):
* WebCoreSupport/SelectPopupClient.cpp:
(WebCore::SelectPopupClient::generateHTML):
* WebCoreSupport/UserMediaClientImpl.cpp:
(WebCore::UserMediaClientImpl::requestUserMedia):

Canonical link: https://commits.webkit.org/133189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148667 268f45cc-cd09-0410-ab3c-d52691b4dbfc